# rustify

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.en.md  README.md
.github/workflows/: ci.yml
crates/rustify-analyzer/: Cargo.toml
crates/rustify-analyzer/src/: lib.rs
crates/rustify-analyzer/tests/: fuzz_test.rs  pipeline.rs
crates/rustify-cli/: Cargo.toml
crates/rustify-cli/benches/: compiler_bench.rs
crates/rustify-cli/src/: main.rs
crates/rustify-cli/tests/: modules.rs  project.rs
crates/rustify-codegen-rust/: Cargo.toml
crates/rustify-codegen-rust/src/: lib.rs
crates/rustify-codegen-rust/tests/: end_to_end.rs
crates/rustify-ir/: Cargo.toml
crates/rustify-ir/src/: lib.rs
crates/rustify-lsp/: Cargo.toml
crates/rustify-lsp/src/: main.rs
crates/rustify-parser/: Cargo.toml
crates/rustify-parser/src/: lib.rs
crates/rustify-playground/: Cargo.toml
crates/rustify-playground/src/: index.html  main.rs
crates/rustify-runtime/: Cargo.toml
crates/rustify-runtime/src/: lib.rs
docs/: README.md  architecture.md  cli.md  eslint.md  globals.md  hybrid.md  lsp.md  playground.md  tooling.md  vscode.md
examples/: async-runtime.ts  async.ts  collections.ts  control-flow.ts  greet.ts  hybrid.ts  hybrid_bridge.ts  invalid.ts  mvp-types.ts  objects.ts  operations.ts  runtime.ts
examples/globals/: globals.ts  main.ts
examples/globals/dist-rust/: main.rs
examples/modules/: main.ts  models.ts
scripts/: ci.sh  package-all.sh  verify-versions.sh
