[workspace]
members = [
    "crates/rustify-analyzer",
    "crates/rustify-cli",
    "crates/rustify-codegen-rust",
    "crates/rustify-ir",
    "crates/rustify-lsp",
    "crates/rustify-parser",
    "crates/rustify-playground",
    "crates/rustify-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rustify-rs/rustify"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures-timer = "3"
futures-lite = "2"
oxc_allocator = "0.114"
oxc_parser = "0.114"
oxc_span = "0.114"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tower-lsp = "0.20"
