[package]
name = "rustify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustify"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustify-analyzer = { path = "../rustify-analyzer", version = "0.1.0" }
rustify-codegen-rust = { path = "../rustify-codegen-rust", version = "0.1.0" }
rustify-ir = { path = "../rustify-ir", version = "0.1.0" }
rustify-parser = { path = "../rustify-parser", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "compiler_bench"
harness = false
