[package]
name = "rustify-codegen-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustify-ir = { path = "../rustify-ir", version = "0.1.0" }
thiserror.workspace = true

[dev-dependencies]
rustify-analyzer = { path = "../rustify-analyzer" }
rustify-parser = { path = "../rustify-parser" }
