[package]
name = "rustify-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustify-lsp"
path = "src/main.rs"

[dependencies]
rustify-analyzer = { path = "../rustify-analyzer" }
rustify-codegen-rust = { path = "../rustify-codegen-rust" }
rustify-ir = { path = "../rustify-ir" }
rustify-parser = { path = "../rustify-parser" }
serde_json.workspace = true
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp.workspace = true
