[package]
name = "rustify-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustify-lsp"
path = "src/main.rs"

[dependencies]
rustify-analyzer = { path = "../rustify-analyzer", version = "0.1.0" }
rustify-codegen-rust = { path = "../rustify-codegen-rust", version = "0.1.0" }
rustify-ir = { path = "../rustify-ir", version = "0.1.0" }
rustify-parser = { path = "../rustify-parser", version = "0.1.0" }
serde_json.workspace = true
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp.workspace = true
